--- a/package.json
+++ b/package.json
@@ -9,55 +9,57 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
+    "@fontsource/raleway": "^4.2.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
-    "@react-three/drei": "^2.2.22",
-    "@sentry/gatsby": "^6.0.2",
+    "@react-three/drei": "^3.4.0",
+    "@sentry/gatsby": "^6.1.0",
     "@svgr/webpack": "^5.5.0",
     "acorn": "^8.0.5",
     "algoliasearch": "^4.8.4",
-    "babel-plugin-remove-graphql-queries": "^2.15.0",
+    "babel-plugin-remove-graphql-queries": "^2.16.0",
     "babel-plugin-styled-components": "^1.12.0",
     "downshift": "^6.1.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "framer-motion": "^3.2.1",
-    "gatsby": "^2.31.1",
-    "gatsby-background-image": "^1.4.0",
-    "gatsby-cli": "^2.18.0",
-    "gatsby-image": "^2.10.0",
-    "gatsby-plugin-algolia": "^0.16.2",
-    "gatsby-plugin-feed": "^2.12.0",
-    "gatsby-plugin-manifest": "^2.11.0",
-    "gatsby-plugin-mdx": "^1.9.0",
-    "gatsby-plugin-offline": "^3.9.0",
-    "gatsby-plugin-preact": "^4.6.0",
-    "gatsby-plugin-react-helmet": "^3.9.0",
+    "framer-motion": "^3.3.0",
+    "gatsby": "^2.32.3",
+    "gatsby-background-image": "^1.4.1",
+    "gatsby-cli": "^2.19.1",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-algolia": "^0.16.3",
+    "gatsby-plugin-feed": "^2.13.0",
+    "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-mdx": "^1.10.0",
+    "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-optimize-svgs": "^1.0.5",
+    "gatsby-plugin-preact": "^4.7.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sharp": "^2.13.2",
-    "gatsby-plugin-sitemap": "^2.11.0",
-    "gatsby-plugin-styled-components": "^3.9.0",
+    "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-plugin-sitemap": "^2.12.0",
+    "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-plugin-svgr": "^2.1.0",
-    "gatsby-plugin-typography": "^2.11.0",
+    "gatsby-plugin-typography": "^2.12.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-remark-autolink-headers": "^2.10.0",
-    "gatsby-remark-embed-video": "^3.0.10",
-    "gatsby-remark-images": "^3.10.0",
-    "gatsby-remark-prismjs": "^3.12.0",
-    "gatsby-remark-responsive-iframe": "^2.10.0",
-    "gatsby-remark-smartypants": "^2.9.0",
-    "gatsby-source-filesystem": "^2.10.0",
-    "gatsby-transformer-json": "^2.10.0",
-    "gatsby-transformer-remark": "^2.15.0",
-    "gatsby-transformer-sharp": "^2.11.0",
+    "gatsby-remark-autolink-headers": "^2.11.0",
+    "gatsby-remark-embed-video": "^3.0.12",
+    "gatsby-remark-images": "^3.11.0",
+    "gatsby-remark-prismjs": "^3.13.0",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-remark-smartypants": "^2.10.0",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-json": "^2.11.0",
+    "gatsby-transformer-remark": "^2.16.0",
+    "gatsby-transformer-sharp": "^2.12.0",
     "i": "^0.3.6",
     "install": "^0.13.0",
     "lerp": "^1.0.3",
     "minimatch": "^3.0.4",
     "pify": "^5.0.0",
     "polished": "^4.1.0",
-    "postprocessing": "^6.20.0",
+    "postprocessing": "^6.20.3",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
     "prismjs": "^1.23.0",
@@ -66,8 +68,8 @@
     "react-adaptive-hooks": "0.0.8",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.1.0",
-    "react-instantsearch-dom": "^6.8.3",
+    "react-icons": "^4.2.0",
+    "react-instantsearch-dom": "^6.9.0",
     "react-is": "^17.0.1",
     "react-simple-maps": "^2.3.0",
     "react-spring": "^9.0.0-rc.3",
@@ -76,42 +78,41 @@
     "react-useportal": "^1.0.13",
     "styled-components": "^5.2.1",
     "styled-theming": "^2.2.0",
-    "three": "^0.124.0",
-    "typeface-raleway": "^1.1.13",
+    "three": "^0.125.2",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/core": "^7.12.13",
+    "@babel/eslint-parser": "^7.12.13",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
-    "@octokit/rest": "^18.0.15",
-    "@storybook/addon-a11y": "^6.1.15",
-    "@storybook/addon-actions": "^6.1.15",
-    "@storybook/addon-backgrounds": "^6.1.15",
-    "@storybook/addon-essentials": "^6.1.15",
-    "@storybook/addon-knobs": "^6.1.15",
-    "@storybook/addon-links": "^6.1.15",
-    "@storybook/addons": "^6.1.15",
-    "@storybook/react": "^6.1.15",
-    "@storybook/theming": "^6.1.15",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/runtime": "^7.12.13",
+    "@octokit/rest": "^18.1.0",
+    "@storybook/addon-a11y": "^6.1.17",
+    "@storybook/addon-actions": "^6.1.17",
+    "@storybook/addon-backgrounds": "^6.1.17",
+    "@storybook/addon-essentials": "^6.1.17",
+    "@storybook/addon-knobs": "^6.1.17",
+    "@storybook/addon-links": "^6.1.17",
+    "@storybook/addons": "^6.1.17",
+    "@storybook/react": "^6.1.17",
+    "@storybook/theming": "^6.1.17",
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
+    "@testing-library/react": "^11.2.5",
     "acorn-dynamic-import": "^4.0.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "babel-preset-gatsby": "^0.11.0",
+    "babel-preset-gatsby": "^0.12.1",
     "bundlesize": "^0.18.1",
     "core-js": "3.8.3",
-    "cypress": "^6.3.0",
+    "cypress": "^6.4.0",
     "cz-conventional-changelog": "3.3.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.18.0",
+    "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^4.0.2",
@@ -119,23 +120,25 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "gatsby-plugin-eslint": "^2.0.8",
+    "eslint-webpack-plugin": "^2.5.0",
+    "gatsby-plugin-eslint": "^3.0.0",
     "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "jsdom": "^16.4.0",
     "lighthouse-ci": "1.12.0",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^10.5.4",
     "now": "^21.0.1",
     "npm-run-all": "^4.1.5",
+    "optimize-plugin": "^1.0.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1",
     "regenerator-runtime": "^0.13.7",
-    "replace-in-file": "^6.1.0",
+    "replace-in-file": "^6.2.0",
     "serve": "^11.3.2",
     "slash": "^3.0.0",
-    "start-server-and-test": "^1.11.7",
+    "start-server-and-test": "^1.12.0",
     "webpagetest": "^0.4.0"
   },
   "keywords": [
