--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@fontsource/raleway": "^4.2.0",
+    "@fontsource/raleway": "^4.2.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
-    "@react-three/drei": "^3.4.0",
+    "@react-three/drei": "^3.8.2",
     "@sentry/gatsby": "^6.1.0",
     "@svgr/webpack": "^5.5.0",
     "acorn": "^8.0.5",
-    "algoliasearch": "^4.8.4",
+    "algoliasearch": "^4.8.5",
     "babel-plugin-remove-graphql-queries": "^2.16.0",
     "babel-plugin-styled-components": "^1.12.0",
     "downshift": "^6.1.0",
@@ -58,7 +58,7 @@
     "lerp": "^1.0.3",
     "minimatch": "^3.0.4",
     "pify": "^5.0.0",
-    "polished": "^4.1.0",
+    "polished": "^4.1.1",
     "postprocessing": "^6.20.3",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
@@ -74,32 +74,32 @@
     "react-simple-maps": "^2.3.0",
     "react-spring": "^9.0.0-rc.3",
     "react-three-fiber": "^5.3.18",
+    "react-tooltip": "^4.2.14",
     "react-typography": "^0.16.19",
     "react-useportal": "^1.0.13",
     "styled-components": "^5.2.1",
-    "styled-theming": "^2.2.0",
     "three": "^0.125.2",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/eslint-parser": "^7.12.13",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "@babel/runtime": "^7.12.13",
-    "@octokit/rest": "^18.1.0",
-    "@storybook/addon-a11y": "^6.1.17",
-    "@storybook/addon-actions": "^6.1.17",
-    "@storybook/addon-backgrounds": "^6.1.17",
-    "@storybook/addon-essentials": "^6.1.17",
-    "@storybook/addon-knobs": "^6.1.17",
-    "@storybook/addon-links": "^6.1.17",
-    "@storybook/addons": "^6.1.17",
-    "@storybook/react": "^6.1.17",
-    "@storybook/theming": "^6.1.17",
+    "@octokit/rest": "^18.1.1",
+    "@storybook/addon-a11y": "^6.1.18",
+    "@storybook/addon-actions": "^6.1.18",
+    "@storybook/addon-backgrounds": "^6.1.18",
+    "@storybook/addon-essentials": "^6.1.18",
+    "@storybook/addon-knobs": "^6.1.18",
+    "@storybook/addon-links": "^6.1.18",
+    "@storybook/addons": "^6.1.18",
+    "@storybook/react": "^6.1.18",
+    "@storybook/theming": "^6.1.18",
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -109,10 +109,10 @@
     "babel-preset-gatsby": "^0.12.1",
     "bundlesize": "^0.18.1",
     "core-js": "3.8.3",
-    "cypress": "^6.4.0",
+    "cypress": "^6.5.0",
     "cz-conventional-changelog": "3.3.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.19.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^4.0.2",
@@ -120,9 +120,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-webpack-plugin": "^2.5.0",
+    "eslint-webpack-plugin": "^2.5.1",
     "gatsby-plugin-eslint": "^3.0.0",
-    "husky": "^4.3.8",
+    "husky": "^5.0.9",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
