--- a/package.json
+++ b/package.json
@@ -9,136 +9,139 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@fontsource/raleway": "^4.2.1",
+    "@fontsource/raleway": "^4.2.2",
     "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/preact": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
-    "@react-three/drei": "^3.8.2",
-    "@sentry/gatsby": "^6.1.0",
+    "@react-three/drei": "^4.1.4",
+    "@sentry/gatsby": "^6.2.5",
     "@svgr/webpack": "^5.5.0",
-    "acorn": "^8.0.5",
-    "algoliasearch": "^4.8.5",
-    "babel-plugin-remove-graphql-queries": "^2.16.0",
+    "algoliasearch": "^4.8.6",
+    "babel-plugin-remove-graphql-queries": "^3.2.0",
     "babel-plugin-styled-components": "^1.12.0",
-    "downshift": "^6.1.0",
+    "downshift": "^6.1.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "framer-motion": "^3.3.0",
-    "gatsby": "^2.32.3",
-    "gatsby-background-image": "^1.4.1",
-    "gatsby-cli": "^2.19.1",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-algolia": "^0.16.3",
-    "gatsby-plugin-feed": "^2.13.0",
-    "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-mdx": "^1.10.0",
-    "gatsby-plugin-offline": "^3.10.0",
+    "framer-motion": "^4.1.3",
+    "gatsby": "^3.2.1",
+    "gatsby-background-image": "^1.5.0",
+    "gatsby-cli": "^3.2.0",
+    "gatsby-plugin-algolia": "^0.18.0",
+    "gatsby-plugin-feed": "^3.2.0",
+    "gatsby-plugin-image": "^1.2.1",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-mdx": "^2.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-optimize-svgs": "^1.0.5",
-    "gatsby-plugin-preact": "^4.7.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-preact": "^5.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sharp": "^2.14.1",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-styled-components": "^3.10.0",
+    "gatsby-plugin-sharp": "^3.2.1",
+    "gatsby-plugin-sitemap": "^3.2.0",
+    "gatsby-plugin-styled-components": "^4.2.0",
     "gatsby-plugin-svgr": "^2.1.0",
-    "gatsby-plugin-typography": "^2.12.0",
-    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-remark-autolink-headers": "^2.11.0",
-    "gatsby-remark-embed-video": "^3.0.12",
-    "gatsby-remark-images": "^3.11.0",
-    "gatsby-remark-prismjs": "^3.13.0",
-    "gatsby-remark-responsive-iframe": "^2.11.0",
-    "gatsby-remark-smartypants": "^2.10.0",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-transformer-json": "^2.11.0",
-    "gatsby-transformer-remark": "^2.16.0",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "i": "^0.3.6",
-    "install": "^0.13.0",
+    "gatsby-plugin-typography": "^3.2.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.21",
+    "gatsby-remark-autolink-headers": "^3.2.0",
+    "gatsby-remark-embed-video": "^3.1.1",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-remark-prismjs": "^4.2.0",
+    "gatsby-remark-responsive-iframe": "^3.2.0",
+    "gatsby-remark-smartypants": "^3.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-json": "^3.2.0",
+    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "gbimage-bridge": "^0.1.2",
     "lerp": "^1.0.3",
-    "minimatch": "^3.0.4",
-    "pify": "^5.0.0",
     "polished": "^4.1.1",
-    "postprocessing": "^6.20.3",
-    "preact": "^10.5.12",
-    "preact-render-to-string": "^5.1.12",
+    "postprocessing": "^6.21.3",
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-adaptive-hooks": "0.0.8",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react-instantsearch-dom": "^6.9.0",
-    "react-is": "^17.0.1",
+    "react-instantsearch-dom": "^6.10.3",
+    "react-is": "^17.0.2",
     "react-simple-maps": "^2.3.0",
-    "react-spring": "^9.0.0-rc.3",
-    "react-three-fiber": "^5.3.18",
-    "react-tooltip": "^4.2.14",
+    "react-spring": "^9.1.0",
+    "react-three-fiber": "^5.3.22",
+    "react-tooltip": "^4.2.17",
     "react-typography": "^0.16.19",
-    "react-useportal": "^1.0.13",
-    "styled-components": "^5.2.1",
-    "three": "^0.125.2",
+    "react-useportal": "^1.0.14",
+    "styled-components": "^5.2.3",
+    "three": "^0.127.0",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/core": "^7.13.15",
+    "@babel/eslint-parser": "^7.13.14",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
-    "@babel/preset-env": "^7.12.16",
-    "@babel/preset-react": "^7.12.13",
-    "@babel/runtime": "^7.12.13",
-    "@octokit/rest": "^18.1.1",
-    "@storybook/addon-a11y": "^6.1.18",
-    "@storybook/addon-actions": "^6.1.18",
-    "@storybook/addon-backgrounds": "^6.1.18",
-    "@storybook/addon-essentials": "^6.1.18",
-    "@storybook/addon-knobs": "^6.1.18",
-    "@storybook/addon-links": "^6.1.18",
-    "@storybook/addons": "^6.1.18",
-    "@storybook/react": "^6.1.18",
-    "@storybook/theming": "^6.1.18",
-    "@testing-library/cypress": "^7.0.3",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/runtime": "^7.13.10",
+    "@octokit/rest": "^18.5.2",
+    "@storybook/addon-a11y": "^6.2.7",
+    "@storybook/addon-actions": "^6.2.7",
+    "@storybook/addon-backgrounds": "^6.2.7",
+    "@storybook/addon-essentials": "^6.2.7",
+    "@storybook/addon-knobs": "^6.2.7",
+    "@storybook/addon-links": "^6.2.7",
+    "@storybook/addons": "^6.2.7",
+    "@storybook/react": "^6.2.7",
+    "@storybook/theming": "^6.2.7",
+    "@testing-library/cypress": "^7.0.5",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
     "acorn-dynamic-import": "^4.0.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "babel-preset-gatsby": "^0.12.1",
+    "babel-preset-gatsby": "^1.2.0",
     "bundlesize": "^0.18.1",
-    "core-js": "3.8.3",
-    "cypress": "^6.5.0",
+    "core-js": "3.10.1",
+    "cypress": "^7.0.1",
     "cz-conventional-changelog": "3.3.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-webpack-plugin": "^2.5.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-unicorn": "^29.0.0",
+    "eslint-webpack-plugin": "^2.5.3",
     "gatsby-plugin-eslint": "^3.0.0",
-    "husky": "^5.0.9",
+    "gatsby-remark-static-images": "^1.2.1",
+    "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
-    "jsdom": "^16.4.0",
-    "lighthouse-ci": "1.12.0",
+    "jsdom": "^16.5.2",
+    "lighthouse-ci": "^1.12.0",
     "lint-staged": "^10.5.4",
     "now": "^21.0.1",
     "npm-run-all": "^4.1.5",
     "optimize-plugin": "^1.0.0",
     "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.1",
+    "react-test-renderer": "^17.0.2",
     "regenerator-runtime": "^0.13.7",
     "replace-in-file": "^6.2.0",
     "serve": "^11.3.2",
     "slash": "^3.0.0",
-    "start-server-and-test": "^1.12.0",
+    "start-server-and-test": "^1.12.1",
+    "stylelint": "^13.12.0",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "webpagetest": "^0.4.0"
   },
   "keywords": [
@@ -152,7 +155,9 @@
     "develop": "GATSBY_EXPERIMENTAL_REMOTE_IMAGES=1 node postinstall.js && npm-run-all -p dev storybook",
     "serve": "gatsby serve",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
+    "lint": "npm-run-all -p lint:eslint lint:css",
+    "lint:css": "stylelint './src/**/*.js'",
+    "lint:eslint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "format": "npm run prettier --write 'src/**/*.js'",
     "check-format": "npm run prettier  -- --list-different",
     "prettier": "prettier --ignore-path .gitignore --write 'src/**/*.js'",
