--- a/package.json
+++ b/package.json
@@ -134,15 +134,13 @@
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.2",
     "regenerator-runtime": "^0.13.7",
-    "replace-in-file": "^6.2.0",
     "serve": "^11.3.2",
     "slash": "^3.0.0",
     "start-server-and-test": "^1.12.1",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
-    "webpagetest": "^0.4.0"
+    "stylelint-processor-styled-components": "^1.10.0"
   },
   "keywords": [
     "gatsby"
