--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
   "main": "n/a",
   "scripts": {
     "build": "PUBLISH_ON_NOW=branch-deploy gatsby build",
-    "build:prod": "PUBLISH_ON_NOW=production gatsby build",
+    "build:prod": "NODE_ENV=production PUBLISH_ON_NOW=production gatsby build",
     "develop": "GATSBY_EXPERIMENTAL_REMOTE_IMAGES=1 npm-run-all -p dev storybook",
     "serve": "gatsby serve",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
@@ -178,7 +178,7 @@
     "deploy": "now ./public --token=$NOW_TOKEN --target staging --local-config=../now.json",
     "deploy:prod": "now ./public --token=$NOW_TOKEN --prod --local-config=../now.json",
     "build-deploy-and-alias-prod": "npm-run-all -s build:prod deploy:prod",
-    "lighthouse": "lighthouse-ci https://jcofman.now.sh --score=90 --performance=85 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
+    "lighthouse": "lighthouse-ci https://jcofman.de --score=90 --performance=85 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
     "storybook": "NODE_ENV=production start-storybook -p 6006",
     "build:storybook": "NODE_ENV=production build-storybook",
     "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook",
