--- a/package.json
+++ b/package.json
@@ -11,58 +11,58 @@
   "dependencies": {
     "@fontsource/raleway": "^4.5.3",
     "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/preact": "^2.0.0",
+    "@mdx-js/preact": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
-    "@react-three/drei": "^8.10.6",
-    "@sentry/gatsby": "^6.17.9",
+    "@react-three/drei": "^8.13.0",
+    "@sentry/gatsby": "^6.18.1",
     "@storybook/builder-webpack5": "^6.4.19",
     "@storybook/manager-webpack5": "^6.4.19",
     "@svgr/webpack": "^6.2.1",
     "@types/react-helmet": "^6.1.5",
     "@types/react-instantsearch-dom": "^6.12.2",
     "@types/react-simple-maps": "^1.0.8",
-    "@types/styled-components": "^5.1.23",
-    "ahooks": "^3.1.9",
-    "algoliasearch": "^4.12.1",
-    "babel-plugin-remove-graphql-queries": "^4.8.0",
-    "babel-plugin-styled-components": "^2.0.5",
+    "@types/styled-components": "^5.1.24",
+    "ahooks": "^3.1.13",
+    "algoliasearch": "^4.12.2",
+    "babel-plugin-remove-graphql-queries": "^4.9.0",
+    "babel-plugin-styled-components": "^2.0.6",
     "downshift": "^6.1.7",
     "eslint-plugin-react-hooks": "^4.3.0",
     "framer-motion": "^6.2.8",
-    "gatsby": "4.8.0",
+    "gatsby": "4.9.1",
     "gatsby-background-image": "^1.6.0",
     "gatsby-build-newrelic": "^1.1.17",
-    "gatsby-cli": "^4.8.0",
+    "gatsby-cli": "^4.9.0",
     "gatsby-plugin-algolia": "^0.26.0",
-    "gatsby-plugin-feed": "^4.8.0",
-    "gatsby-plugin-image": "^2.8.0",
-    "gatsby-plugin-manifest": "^4.8.0",
-    "gatsby-plugin-mdx": "^3.8.0",
-    "gatsby-plugin-offline": "^5.8.0",
+    "gatsby-plugin-feed": "^4.9.0",
+    "gatsby-plugin-image": "^2.9.0",
+    "gatsby-plugin-manifest": "^4.9.0",
+    "gatsby-plugin-mdx": "^3.9.0",
+    "gatsby-plugin-offline": "^5.9.0",
     "gatsby-plugin-optimize-svgs": "^1.0.5",
-    "gatsby-plugin-preact": "^6.8.0",
-    "gatsby-plugin-react-helmet": "^5.8.0",
+    "gatsby-plugin-preact": "^6.9.0",
+    "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "^4.8.0",
-    "gatsby-plugin-sitemap": "^5.8.0",
-    "gatsby-plugin-styled-components": "^5.8.0",
+    "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-plugin-sitemap": "^5.9.0",
+    "gatsby-plugin-styled-components": "^5.9.0",
     "gatsby-plugin-svgr": "^2.1.0",
-    "gatsby-plugin-typography": "^4.8.0",
+    "gatsby-plugin-typography": "^4.9.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
-    "gatsby-remark-autolink-headers": "^5.8.0",
-    "gatsby-remark-copy-linked-files": "^5.8.0",
+    "gatsby-remark-autolink-headers": "^5.9.0",
+    "gatsby-remark-copy-linked-files": "^5.9.0",
     "gatsby-remark-embed-video": "^3.1.1",
-    "gatsby-remark-images": "^6.8.0",
-    "gatsby-remark-prismjs": "^6.8.0",
-    "gatsby-remark-responsive-iframe": "^5.8.0",
-    "gatsby-remark-smartypants": "^5.8.0",
-    "gatsby-source-filesystem": "^4.8.0",
+    "gatsby-remark-images": "^6.9.0",
+    "gatsby-remark-prismjs": "^6.9.0",
+    "gatsby-remark-responsive-iframe": "^5.9.0",
+    "gatsby-remark-smartypants": "^5.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
     "gatsby-source-notion-api": "^0.11.0",
-    "gatsby-transformer-json": "^4.8.0",
-    "gatsby-transformer-remark": "^5.8.0",
-    "gatsby-transformer-sharp": "^4.8.0",
+    "gatsby-transformer-json": "^4.9.0",
+    "gatsby-transformer-remark": "^5.9.0",
+    "gatsby-transformer-sharp": "^4.9.0",
     "gbimage-bridge": "^0.2.1",
     "lerp": "^1.0.3",
     "polished": "^4.1.4",
@@ -86,7 +86,7 @@
     "react-typography": "^0.16.20",
     "react-useportal": "^1.0.16",
     "styled-components": "^5.3.3",
-    "three": "^0.138.0",
+    "three": "^0.138.3",
     "typography": "^0.16.21"
   },
   "devDependencies": {
@@ -119,30 +119,30 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react-dom": "^17.0.13",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "acorn-dynamic-import": "^4.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
-    "babel-preset-gatsby": "^2.8.0",
+    "babel-preset-gatsby": "^2.9.0",
     "bundlesize": "^0.18.1",
     "core-js": "3.21.1",
-    "cypress": "^9.5.0",
+    "cypress": "^9.5.1",
     "cz-conventional-changelog": "3.3.0",
     "dotenv": "^16.0.0",
-    "eslint": "^8.9.0",
+    "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.4.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-unicorn": "^41.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "gatsby-plugin-eslint": "^4.0.2",
@@ -156,7 +156,7 @@
     "jest-styled-components": "^7.0.8",
     "jsdom": "^19.0.0",
     "lighthouse-ci": "^1.13.1",
-    "lint-staged": "^12.3.4",
+    "lint-staged": "^12.3.5",
     "now": "^21.0.1",
     "npm-run-all": "^4.1.5",
     "optimize-plugin": "^1.1.0",
@@ -170,15 +170,15 @@
     "stylelint-config-recommended": "^7.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.2"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
   "scripts": {
-    "build": "PUBLISH_ON_NOW=branch-deploy gatsby build --open-tracing-config-file ./node_modules/gatsby-build-newrelic/zipkin-local.js --graphql-tracing",
-    "build:prod": "NODE_ENV=production PUBLISH_ON_NOW=production gatsby build --open-tracing-config-file ./node_modules/gatsby-build-newrelic/zipkin-local.js --graphql-tracing",
+    "build": "PUBLISH_ON_NOW=branch-deploy gatsby build",
+    "build:prod": "NODE_ENV=production PUBLISH_ON_NOW=production gatsby build",
     "develop": "GATSBY_EXPERIMENTAL_REMOTE_IMAGES=1 npm-run-all -p dev storybook",
     "serve": "gatsby serve",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
@@ -224,5 +224,10 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "browserslist": [
+    "supports es6-module",
+    ">0.25%",
+    "not dead"
+  ]
 }
