--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "@fontsource/raleway": "^4.5.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/preact": "^1.6.22",
