--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gatsby-remark-prismjs": "^6.9.0",
     "gatsby-remark-responsive-iframe": "^5.9.0",
     "gatsby-remark-smartypants": "^5.9.0",
+    "gatsby-remark-video": "^1.2.5",
     "gatsby-source-filesystem": "^4.9.0",
     "gatsby-source-notion-api": "^0.11.0",
     "gatsby-transformer-json": "^4.9.0",
